[package]
name = "noalloc-vec-rs"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Jérémy Audiger", "Kamel Azira"]
edition = "2024"
rust-version = "1.90"
readme = "README.md"
repository = "https://github.com/jaudiger/noalloc-vec-rs"
description = """
A no-allocation vector implementation for environment without memory allocation.
"""
categories = ["no-std"]
keywords = ["static", "no-heap"]

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "bench"
harness = false

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"

[profile.dev]
split-debuginfo = "unpacked"

[profile.bench]
codegen-units = 1
lto = true
incremental = false
opt-level = 2
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
panic = "abort"
strip = "symbols"
